--- a/project_lock/app_lock/templates/services/home.html
+++ b/project_lock/app_lock/templates/services/home.html
@@ -225,7 +225,7 @@
 
     </div>
     <div id="footer">
-      <p>Desenvolvido pela Diretoria de Modernização e Inovação - 2024</p>
+      <p>Desenvolvido pela <strong>Diretoria de Modernização e Inovação</strong> - 2024</p>
     </div>
   </div>
 
