--- a/project_lock/app_lock/templates/services/home.html
+++ b/project_lock/app_lock/templates/services/home.html
@@ -18,7 +18,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 
-  <title>Lock - Gerenciador de senhas</title>
+  <title>Locker - Gerenciador de senhas</title>;
 </head>
 
 <body>
