--- a/project_lock/app_lock/static/css/style.css
+++ b/project_lock/app_lock/static/css/style.css
@@ -13,6 +13,14 @@ body, html{
   
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo_cldf{
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .wrapper{
@@ -21,18 +29,13 @@ body, html{
   border-width: 1px;
   border-color: #dadada;
   width: 24rem;
-  border-radius: 2px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  
+  height: 26rem;
+  border-radius: 4px;
 }
 
-.wrapper h1{
-  margin-top: 4rem;
-  margin-left: 2rem;
+.wrapper h2{
   color: #504f4f;
+  margin: 2rem 0 2rem 2rem;
 }
 
 .form-control, .btn_entrar_login{
